Changed portal words to Cilantro Course management from Django Consultants

--- a/mysite/templates/portal/index.html
+++ b/mysite/templates/portal/index.html
@@ -12,7 +12,7 @@ Portal
 {% block content %}
     <section>
         <h2>Welcome, {{ user.username }}</h2>
-        <p>This is the main page of the web portal.</p>
+        <p>This is the main page of the web portal. This is where all of the user's actions will take place including showing courses.</p>
     </section>
 {% endblock %}
 
