--- a/mysite/templates/portal/portal.html
+++ b/mysite/templates/portal/portal.html
@@ -6,12 +6,12 @@ This is the main template for all portal pages.
 {% endcomment %}
 
 {% block head %}
-    <title>Django Consultants | {% block title %}{% endblock %}</title>
+    <title>Cilantro Course Management System | {% block title %}{% endblock %}</title>
 {% endblock %}
 
 {% block body %}
     <header>
-        <h1>Django Consultants | Web Portal</h1>
+        <h1>Cilantro Course Management System | Web Portal</h1>
     </header>
 
     <section>
@@ -24,7 +24,7 @@ This is the main template for all portal pages.
     {% block content %}{% endblock %}
 
     <footer>
-        <span>&copy; 2010, Django Consultants</span>
+        <span>&copy; 2012 -- Cilantro Course Management System</span>
     </footer>
 {% endblock %}
 
